--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <h2><strong>Aggregators</strong></h2>
 <table align="center" border="0" cellpadding="4" cellspacing="4" height="100" width="1000">
 <tbody>
-<tr><th><a href="https://hufmagazine.com" target="_blank">HUF Magazine</a></th>
+<tr>
+	<th><a href="https://hufmagazine.com" target="_blank">HUF Magazine</a></th>
 <th><a href="https://www.juxtapoz.com" target="_blank">Juxtapoz Magazine</a></th>
 <th><a href="https://www.theperfectmagazine.com" target="_blank">The Perfect Magazine</a></th>
 <th><a href="https://www.i-magazine.tv" target="_blank">i-Magazine</a></th>
